--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon app.js"
+    "server": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [
     "Node",
